--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,8 @@ version = "0.2.1"
 description = "Unofficial Python API client that allows you to access your Supernote files through the Supernote Cloud"
 readme = "README.md"
 authors = [
-    { name = "Julian Prester", email = "hi@julianprester.com" }
+    { name = "Julian Prester", email = "hi@julianprester.com" },
+    { name = "Steve Zatz" }
 ]
 license = {text = "Apache-2.0"}
 requires-python = ">=3.10"
@@ -21,10 +22,10 @@ browser = ["playwright>=1.40.0"]
 sncloud = "sncloud.cli:cli"
 
 [project.urls]
-Homepage = "https://github.com/julianprester/sncloud"
-Changelog = "https://github.com/julianprester/sncloud/releases"
-Issues = "https://github.com/julianprester/sncloud/issues"
-CI = "https://github.com/julianprester/sncloud/actions"
+Homepage = "https://github.com/slzatz/sncloud"
+Changelog = "https://github.com/slzatz/sncloud/releases"
+Issues = "https://github.com/slzatz/sncloud/issues"
+CI = "https://github.com/slzatz/sncloud/actions"
 
 [build-system]
 requires = ["hatchling"]
